tests/miz/fail/parser/fail_parser_template_arguments_chained_iff_001.miz
definition
  let T be type;
  let x be T;
  pred TemplatePredDef: x matches[T] means
    x = x iff x = x iff x = x;
end;
